# CUDA-Shuffle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PrimeFieldShuffle.h  README.md  bench_json_to_graph.py  benchmark_results1.json  cdf_graph.py  epyc_benchmarks.json  epyc_final.json  extract_soboleva.sh  failed_rao_sandelius.json  full_permutation_results.txt  full_results.txt  gpu_final.json  main.cu  mmd_results.csv  plot_hypothesis_tests.py  primes.py  result.json  round_number15.txt  run_experiment.sh
benchmarks/: CMakeLists.txt  GatherShuffle.h  ParamBench.cu  ScatterShuffle.h  ShuffleBench.cu
cmake/: DownloadGTest.cmake
include/: CudaHelpers.h  DefaultRandomGenerator.h  RandomGenerator.h  ThrustInclude.h  WyHash.h
include/shuffle/: AndersonShuffle.h  BijectiveFunctionCompressor.h  BijectiveFunctionScanShuffle.h  BijectiveFunctionShuffle.h  BijectiveFunctionSortShuffle.h  ButterflyBijectiveShuffle.h  CzumajShuffle.h  DartThrowing.h  FeistelBijectiveShuffle.h  FeistelRoundFunctions.h  FisherYatesShuffle.h  GPUSwapShuffle.h  LCGBijectiveShuffle.h  LubyRackoffBijectiveShuffle.h  MergeShuffle.h  NoOpBijectiveShuffle.h  PeriodicLCGShuffle.h  PhiloxShuffle.h  PrimeFieldBijectiveShuffle.h  PrimeFieldShuffle.h  PrimeFieldSortShuffle.h  RaoSandeliusShuffle.h  SPNetworkBijectiveShuffle.h  ScatterShuffle.h  Shuffle.h  SortShuffle.h  StdShuffle.h  ThrustShuffle.h
mergeshuffle/: CMakeLists.txt  MergeShuffle.h
mergeshuffle-modified/: CMakeLists.txt
mergeshuffle-modified/src/: merge.cc  merge_omp.cc  random.h  split.h
mergeshuffle/include/: MergeShuffle.h
mergeshuffle/src/: fisher_yates.h  merge.cc  merge_omp.cc  merge_vec.cc  merge_vec.h  random.cc  random.h  split.h  split_par.cc  split_vec.h
test/: CMakeLists.txt  ChiSquared.cu  FunctionalTests.cc  FunctionalTests.cu  MMD.cu  ParameterQualityTests.cu  RandomnessTests.cu
test/include/: ConstantGenerator.h  EmptyShuffle.h  PrefixTree.h  RandomReverseShuffle.h  RandomnessTest.h
test/include/nist-utils/: cephes.h  matrix.h
test/randomness/: BitFrequencyTests.cu  CMakeLists.txt  MatrixRankTest.cu  RunsTests.cu  ShuffleTests.cu
