function(create_test test_name)
    add_executable(${test_name} ${test_name}.cu)
    if(NOT MSVC)
    target_link_libraries(${test_name} pthread)
    endif()
    target_link_libraries(${test_name} gtest_main)
    target_compile_options(${test_name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-extended-lambda;--std=c++14>)
    target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/test/include)
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction(create_test)

create_test(FunctionalTests)
add_subdirectory(randomness)