function(create_exe exe_name)
    add_executable(${exe_name} ${exe_name}.cu)
    if(NOT MSVC)
        target_link_libraries(${exe_name} pthread)
    endif()
    target_link_libraries(${exe_name} gtest_main OpenMP::OpenMP_CXX tbb)
    target_compile_options(${exe_name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-extended-lambda>)
    target_include_directories(${exe_name} PRIVATE ${CMAKE_SOURCE_DIR}/test/include)
endfunction(create_exe)

function(create_test test_name)
    create_exe(${test_name})
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction(create_test)

create_exe(ChiSquared)
create_exe(MMD)